[gd_scene load_steps=19 format=3 uid="uid://douee6pmp57d0"]

[ext_resource type="Script" uid="uid://cv6nfpnws74uf" path="res://Scenes/skate.gd" id="1_b0wo0"]
[ext_resource type="PackedScene" uid="uid://c76gsse0mh8lq" path="res://Scenes/skate.glb" id="1_j72mx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j72mx"]
size = Vector3(1, 0.0512695, 3.36584)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j72mx"]
height = 0.180145
radius = 0.108887

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b0wo0"]
height = 0.180145
radius = 0.108887

[sub_resource type="CylinderShape3D" id="CylinderShape3D_my1ux"]
height = 0.180145
radius = 0.108887

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kolag"]
height = 0.180145
radius = 0.097168

[sub_resource type="Animation" id="Animation_my1ux"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_Scene:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_soxiv"]
resource_name = "dopefein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, -6.28319)]
}

[sub_resource type="Animation" id="Animation_vg3c5"]
resource_name = "fs shuv"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_nycm7"]
resource_name = "hardflipp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.307787),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, -6.28319)]
}

[sub_resource type="Animation" id="Animation_4uep3"]
resource_name = "heel!!"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.46),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}

[sub_resource type="Animation" id="Animation_kolag"]
resource_name = "kickflip"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.37, 0.43),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.174533, 0, 3.14159), Vector3(-0.174533, 0, 6.28319), Vector3(0, 0, 6.28319)]
}

[sub_resource type="Animation" id="Animation_f0x02"]
resource_name = "lazerflip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 6.28319)]
}

[sub_resource type="Animation" id="Animation_b0wo0"]
resource_name = "ollie"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sketchfab_Scene:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.366667, 0.566667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.378687, 0), Vector3(0, 1.25156, 0), Vector3(0, 1.25156, 0.222215), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_Scene:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.366667, 0.566667, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.362487, 0, 0), Vector3(-0.362487, 0, 0), Vector3(-0.0107512, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vvpow"]
resource_name = "shuvit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.31),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_5emtc"]
resource_name = "trifip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.52),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0872665, -6.28319, -6.28319), Vector3(0, -6.28319, -6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_my1ux"]
_data = {
&"RESET": SubResource("Animation_my1ux"),
&"dopefein": SubResource("Animation_soxiv"),
&"fs_shuv": SubResource("Animation_vg3c5"),
&"hardflipp": SubResource("Animation_nycm7"),
&"heel!!": SubResource("Animation_4uep3"),
&"kickflip": SubResource("Animation_kolag"),
&"lazerflip": SubResource("Animation_f0x02"),
&"ollie": SubResource("Animation_b0wo0"),
&"shuvit": SubResource("Animation_vvpow"),
&"trifip": SubResource("Animation_5emtc")
}

[node name="Skate" type="VehicleBody3D"]
script = ExtResource("1_b0wo0")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("1_j72mx")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0197754, -0.0154874)
shape = SubResource("BoxShape3D_j72mx")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.374034, -0.197598, -0.873056)
shape = SubResource("CylinderShape3D_j72mx")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.36582, -0.197598, -0.873056)
shape = SubResource("CylinderShape3D_b0wo0")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.376177, -0.197598, 0.884659)
shape = SubResource("CylinderShape3D_my1ux")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.376486, -0.197598, 0.884659)
shape = SubResource("CylinderShape3D_kolag")

[node name="VehicleWheel3D" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.387871, -0.182097, 0.884622)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.15

[node name="VehicleWheel3D2" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.387871, -0.182144, -0.85429)
use_as_traction = true
wheel_radius = 0.15

[node name="VehicleWheel3D3" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.361496, -0.182144, -0.85429)
use_as_traction = true
wheel_radius = 0.15

[node name="VehicleWheel3D4" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.361496, -0.182144, 0.872852)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_my1ux")
}

[node name="Timer" type="Timer" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.14, 0, 0, 0, 1, 0.370798, -0.18494, 0.913489)

[node name="RayCast3D2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.14, 0, 0, 0, 1, -0.376003, -0.18494, 0.913489)

[node name="RayCast3D3" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.14, 0, 0, 0, 1, -0.376003, -0.18494, -0.891297)

[node name="RayCast3D4" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.14, 0, 0, 0, 1, 0.388773, -0.18494, -0.891297)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 450.0
offset_top = 559.0
offset_right = 511.0
offset_bottom = 582.0
text = "Velocity"

[editable path="Sketchfab_Scene"]
